tries to change some headers and buttons to make sure i know what im doing lol
Updated the header, menu, and banner sections to reflect new branding and content. Adjusted button labels and added a brief introduction to the website.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<a href="index.html" class="logo"><strong>Forty</strong> <span>by HTML5 UP</span></a>
+						<a href="index.html" class="logo"><strong>Portfolio</strong> <span>by Evan J. Long</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -29,13 +29,14 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">Landing</a></li>
-							<li><a href="generic.html">Generic</a></li>
+							<li><a href="landing.html">Projects</a></li>
+							<li><a href="landing.html">Blog</a></li>
+							<li><a href="generic.html">Contact</a></li>
 							<li><a href="elements.html">Elements</a></li>
 						</ul>
 						<ul class="actions stacked">
-							<li><a href="#" class="button primary fit">Get Started</a></li>
-							<li><a href="#" class="button fit">Log In</a></li>
+							<li><a href="#" class="button primary fit">edited_button1</a></li>
+							<li><a href="#" class="button fit">edited_button2</a></li>
 						</ul>
 					</nav>
 
@@ -43,13 +44,14 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>Hi, my name is Forty</h1>
+								<h1>Welcome to my Website!</h1>
 							</header>
 							<div class="content">
-								<p>A responsive site template designed by HTML5 UP<br />
-								and released under the Creative Commons.</p>
+								<p>The site is double faceted. 
+									A showcase of the recent work I take pride in can be found in my Portfolio, 
+									While an ongoing discussion of interesting topics in the tech world can be found in my Blog.</p>
 								<ul class="actions">
-									<li><a href="#one" class="button next scrolly">Get Started</a></li>
+									<li><a href="#one" class="button next scrolly">edited_button3</a></li>
 								</ul>
 							</div>
 						</div>
@@ -212,4 +214,5 @@
 			<script src="assets/js/main.js"></script>
 
 	</body>
+
 </html>
