--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Forty by HTML5 UP</title>
+		<title>Evan J. Long</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -47,9 +47,7 @@
 								<h1>Welcome to my Website!</h1>
 							</header>
 							<div class="content">
-								<p>The site is double faceted. 
-									A showcase of the recent work I take pride in can be found in my Portfolio, 
-									While an ongoing discussion of interesting topics in the tech world can be found in my Blog.</p>
+								<p>Here can be found both my Portfolio and a "Keeping up with Tech" blog. I'm very proud of everything on this site, so please reach out if any specific items pique your interest!!</p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">edited_button3</a></li>
 								</ul>
@@ -67,8 +65,8 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Aliquam</a></h3>
-										<p>Ipsum dolor sit amet</p>
+										<h3><a href="landing.html" class="link">Portfolio</a></h3>
+										<p>Not-so-exhaustive showcase of my recent projects</p>
 									</header>
 								</article>
 								<article>
@@ -216,3 +214,4 @@
 	</body>
 
 </html>
+
