Revise links and contact details in index.html
Updated links and contact information in the index.html file.

can now use this as basis for any other page using this format

--- a/index.html
+++ b/index.html
@@ -29,14 +29,9 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">Projects</a></li>
-							<li><a href="landing.html">Blog</a></li>
-							<li><a href="generic.html">Contact</a></li>
-							<li><a href="elements.html">Elements</a></li>
-						</ul>
-						<ul class="actions stacked">
-							<li><a href="#" class="button primary fit">edited_button1</a></li>
-							<li><a href="#" class="button fit">edited_button2</a></li>
+							<li><a href="portfolio.html">Projects</a></li>
+							<li><a href="blog.html">Blog</a></li>
+							<li><a href="contact.html">Contact</a></li>
 						</ul>
 					</nav>
 
@@ -47,9 +42,9 @@
 								<h1>Welcome to my Website!</h1>
 							</header>
 							<div class="content">
-								<p>Here can be found both my Portfolio and a "Keeping up with Tech" blog. I'm very proud of everything on this site, so please reach out if any specific items pique your interest!!</p>
+								<p>Here can be found both my Portfolio and a "Keeping up with Tech" blog. I'm very proud of everything on this site, so please contact me if any specific items pique your interest!!</p>
 								<ul class="actions">
-									<li><a href="#one" class="button next scrolly">edited_button3</a></li>
+									<li><a href="contact.html" class="button next scrolly">edited_button3</a></li>
 								</ul>
 							</div>
 						</div>
@@ -65,7 +60,7 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Portfolio</a></h3>
+										<h3><a href="portfolio.html" class="link">Portfolio</a></h3>
 										<p>Not-so-exhaustive showcase of my recent projects</p>
 									</header>
 								</article>
@@ -74,44 +69,8 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Tempus</a></h3>
+										<h3><a href="blog.html" class="link">Tempus</a></h3>
 										<p>feugiat amet tempus</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="landing.html" class="link">Magna</a></h3>
-										<p>Lorem etiam nullam</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="landing.html" class="link">Ipsum</a></h3>
-										<p>Nisl sed aliquam</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="landing.html" class="link">Consequat</a></h3>
-										<p>Ipsum dolor sit amet</p>
-									</header>
-								</article>
-								<article>
-									<span class="image">
-										<img src="images/pic06.jpg" alt="" />
-									</span>
-									<header class="major">
-										<h3><a href="landing.html" class="link">Etiam</a></h3>
-										<p>Feugiat amet tempus</p>
 									</header>
 								</article>
 							</section>
@@ -120,11 +79,13 @@
 							<section id="two">
 								<div class="inner">
 									<header class="major">
-										<h2>Massa libero</h2>
+										<h2>Let's get in touch!</h2>
 									</header>
-									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
+									<p>I know there's a lot here, and frankly some of it might not be explained to the professional degree it deserves. 
+										Please feel free to reach out regarding any questions, comments, or kudos (I'd hope) you have on ANYTHING you see here... 
+										I'd love to start a discourse.</p>
 									<ul class="actions">
-										<li><a href="landing.html" class="button next">Get Started</a></li>
+										<li><a href="contact.html" class="button next">Contact Me!</a></li>
 									</ul>
 								</div>
 							</section>
@@ -161,23 +122,14 @@
 									<div class="contact-method">
 										<span class="icon solid alt fa-envelope"></span>
 										<h3>Email</h3>
-										<a href="#">information@untitled.tld</a>
+										<a href="longevan217@gmail.com">longevan217@gmail.com</a>
 									</div>
 								</section>
 								<section>
 									<div class="contact-method">
 										<span class="icon solid alt fa-phone"></span>
 										<h3>Phone</h3>
-										<span>(000) 000-0000 x12387</span>
-									</div>
-								</section>
-								<section>
-									<div class="contact-method">
-										<span class="icon solid alt fa-home"></span>
-										<h3>Address</h3>
-										<span>1234 Somewhere Road #5432<br />
-										Nashville, TN 00000<br />
-										United States of America</span>
+										<span>(713) 855-1311</span>
 									</div>
 								</section>
 							</section>
@@ -188,14 +140,12 @@
 					<footer id="footer">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 								<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+								<li>&copy; 2025</li><li>Evan J. Long</li><li>All Rights Reserved</li>
 							</ul>
 						</div>
 					</footer>
@@ -214,4 +164,5 @@
 	</body>
 
 </html>
+
 
