Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="blog.html" class="link">Tempus</a></h3>
-										<p>feugiat amet tempus</p>
+										<h3><a href="blog.html" class="link">Blog</a></h3>
+										<p>Posts cover recent advances in the tech world I found particularly interesting</p>
 									</header>
 								</article>
 							</section>
@@ -164,5 +164,6 @@
 	</body>
 
 </html>
+
 
 
