Fix HTML structure and update content
see if we can't add my actual photos to the home page

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 							<section id="one" class="tiles">
 								<article>
 									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
+										<img src="ref_files/PPPP.jpg" alt="the Peoples Purple Potato Pounder"/>
 									</span>
 									<header class="major">
 										<h3><a href="portfolio.html" class="link">Portfolio</a></h3>
@@ -66,7 +66,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
+										<img src="ref_files/lilguy.jpeg" alt="Deep AI - generated blog cover photo" />
 									</span>
 									<header class="major">
 										<h3><a href="blog.html" class="link">Blog</a></h3>
@@ -164,6 +164,7 @@
 	</body>
 
 </html>
+
 
 
 
