Revise portfolio details and contact info
tried to put some pictures in, renamed the sections on the porfolio page, definitely did not actually make the pages referenced here yet.

--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,6 @@
 							<li><a href="landing.html">Projects</a></li>
 							<li><a href="landing.html">Blog</a></li>
 							<li><a href="generic.html">Contact</a></li>
-							<li><a href="elements.html">Elements</a></li>
 						</ul>
 						<ul class="actions stacked">
 							<li><a href="#" class="button primary fit">edited_button1</a></li>
@@ -47,7 +46,8 @@
 								<h1>Welcome to my Porfolio!</h1>
 							</header>
 							<div class="content">
-								<p>Here can be found both my Portfolio and a "Keeping up with Tech" blog. I'm very proud of everything on this site, so please reach out if any specific items pique your interest!!</p>
+								<p>Below is a showcase of some work I'm proud of. Please don't hesitate to reach out with any questions or comments
+								regarding anything you see! (I do love talking about these things).</p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">edited_button3</a></li>
 								</ul>
@@ -62,29 +62,29 @@
 							<section id="one" class="tiles">
 								<article>
 									<span class="image">
-										<img src="images/pic01.jpg" alt="" />
+										<img src="ME_other/IMG_9334.gif" alt="High Contrast Flow Visualization around a cylinder in a wind tunnel " />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Portfolio</a></h3>
-										<p>Not-so-exhaustive showcase of my recent projects</p>
+										<h3><a href="utexas.html" class="link">Coursework at the University of Texas</a></h3>
+										<p>Projects completed as part of my curriculum... more interesting than you'd think!</p>
 									</header>
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
+										<img src="UNM_other/flamey_cover.jpg" alt="Flamethrower for a high school English Project" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Tempus</a></h3>
-										<p>feugiat amet tempus</p>
+										<h3><a href="unm.html" class="link">Coursework at the University of New Mexico - Los Alamos</a></h3>
+										<p>Projects completed while living in Los Alamos -- unbelivably all for some class credit!</p>
 									</header>
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
+										<img src="trel/pointed_rocket.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Magna</a></h3>
-										<p>Lorem etiam nullam</p>
+										<h3><a href="labs.html" class="link">Lab Work</a></h3>
+										<p>Projects completed to achieve the goals of different Labs at the University of Texas</p>
 									</header>
 								</article>
 								<article>
@@ -92,8 +92,8 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Ipsum</a></h3>
-										<p>Nisl sed aliquam</p>
+										<h3><a href="orgs.html" class="link">Student Organization Involvement</a></h3>
+										<p>Projects undertaken (and leadership roles pursued) to promote the aims of student orgs at UT</p>
 									</header>
 								</article>
 								<article>
@@ -101,8 +101,8 @@
 										<img src="images/pic05.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Consequat</a></h3>
-										<p>Ipsum dolor sit amet</p>
+										<h3><a href="makerspace.html" class="link">Job</a></h3>
+										<p>What I've been paid to do so far in my job in the Hello Maker Studio!</p>
 									</header>
 								</article>
 								<article>
@@ -110,8 +110,8 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Etiam</a></h3>
-										<p>Feugiat amet tempus</p>
+										<h3><a href="landing.html" class="link">Personal Projects</a></h3>
+										<p>Most of what I do in my free time.</p>
 									</header>
 								</article>
 							</section>
@@ -120,16 +120,19 @@
 							<section id="two">
 								<div class="inner">
 									<header class="major">
-										<h2>Massa libero</h2>
+										<h2>Let's get in touch!</h2>
 									</header>
-									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus.</p>
+									<p>I know there's a lot here, and frankly some of it might not be explained to the professional degree it deserves. 
+										Please feel free to reach out regarding any questions, comments, or kudos (I'd hope) you have on ANYTHING you see here... 
+										I'd love to start a discourse.</p>
 									<ul class="actions">
-										<li><a href="landing.html" class="button next">Get Started</a></li>
+										<li><a href="contact.html" class="button next">Contact Me!</a></li>
 									</ul>
 								</div>
 							</section>
 
 					</div>
+
 
 				<!-- Contact -->
 					<section id="contact">
@@ -161,23 +164,14 @@
 									<div class="contact-method">
 										<span class="icon solid alt fa-envelope"></span>
 										<h3>Email</h3>
-										<a href="#">information@untitled.tld</a>
+										<a href="longevan217@gmail.com">longevan217@gmail.com</a>
 									</div>
 								</section>
 								<section>
 									<div class="contact-method">
 										<span class="icon solid alt fa-phone"></span>
 										<h3>Phone</h3>
-										<span>(000) 000-0000 x12387</span>
-									</div>
-								</section>
-								<section>
-									<div class="contact-method">
-										<span class="icon solid alt fa-home"></span>
-										<h3>Address</h3>
-										<span>1234 Somewhere Road #5432<br />
-										Nashville, TN 00000<br />
-										United States of America</span>
+										<span>(713) 855-1311</span>
 									</div>
 								</section>
 							</section>
@@ -188,14 +182,12 @@
 					<footer id="footer">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
 								<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+								<li>&copy; 2025</li><li>Evan J. Long</li><li>All Rights Reserved</li>
 							</ul>
 						</div>
 					</footer>
@@ -214,4 +206,3 @@
 	</body>
 
 </html>
-
