--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<a href="index.html" class="logo"><strong>Portfolio</strong> <span>by Evan J. Long</span></a>
+						<a href="index.html" class="logo"><strong>A Personal Website</strong> <span>by Evan J. Long</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -164,6 +164,7 @@
 	</body>
 
 </html>
+
 
 
 
