--- a/blog.html
+++ b/blog.html
@@ -36,8 +36,10 @@
           <div class="inner">
             <header class="major">
               <h1>Blog</h1>
+              <p> Here's what's new in the tech world, and my take on the matter. </p>
             </header>
             <div id="posts" class="posts-grid"></div>
+            <!-- this is where the JavaScript file (blog.js) shuold populate posts -->
           </div>
         </section>
       </div>
@@ -64,6 +66,6 @@
     <script src="assets/js/breakpoints.min.js"></script>
     <script src="assets/js/util.js"></script>
     <script src="assets/js/main.js"></script>
-    <script src="script.js"></script>
+    <script src="assets/js/blog.js"></script>
   </body>
 </html>
