--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@
 							<section id="one" class="tiles">
 								<article>
 									<span class="image">
-										<img src="ME_other/IMG_9334.gif" alt="High Contrast Flow Visualization around a cylinder in a wind tunnel " />
+										<img src="ME_other/cover_ME.png" alt="High Contrast Flow Visualization around a cylinder in a wind tunnel " />
 									</span>
 									<header class="major">
 										<h3><a href="utexas.html" class="link">Coursework at the University of Texas</a></h3>
