--- a/blog.html
+++ b/blog.html
@@ -14,7 +14,7 @@
 
       <!-- Header -->
       <header id="header">
-        <a href="index.html" class="logo"><strong>Evan Long</strong> <span>Blog</span></a>
+        <a href="index.html" class="logo"><strong>A Tech Blog</strong> <span>by Evan J. Long</span></a>
         <nav>
           <a href="#menu">Menu</a>
         </nav>
