--- a/portfolio.html
+++ b/portfolio.html
@@ -29,9 +29,9 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">Projects</a></li>
-							<li><a href="landing.html">Blog</a></li>
-							<li><a href="generic.html">Contact</a></li>
+							<li><a href="portfolio.html">Projects</a></li>
+							<li><a href="blog.html">Blog</a></li>
+							<li><a href="contact.html">Contact</a></li>
 						</ul>
 						<ul class="actions stacked">
 							<li><a href="#" class="button primary fit">edited_button1</a></li>
@@ -89,7 +89,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
+										<img src="goomba_smack.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="orgs.html" class="link">Student Organization Involvement</a></h3>
@@ -98,7 +98,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
+										<img src="makerspace/pipetteholder_CAD.png" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="makerspace.html" class="link">Job</a></h3>
