--- a/portfolio.html
+++ b/portfolio.html
@@ -34,8 +34,7 @@
 							<li><a href="contact.html">Contact</a></li>
 						</ul>
 						<ul class="actions stacked">
-							<li><a href="#" class="button primary fit">edited_button1</a></li>
-							<li><a href="#" class="button fit">edited_button2</a></li>
+							<li><a href="contact.html" class="button primary fit">Report an Issue</a></li>
 						</ul>
 					</nav>
 
