--- a/blog.html
+++ b/blog.html
@@ -26,7 +26,10 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="portfolio.html">Projects</a></li>
           <li><a href="blog.html">Blog</a></li>
-          <li><a href="generic.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+        <ul class="actions stacked">
+          <li><a href="contact.html" class="button primary fit">Report an Issue</a></li>
         </ul>
       </nav>
 
